--- a/parduotuve/include/styles.css
+++ b/parduotuve/include/styles.css
@@ -39,3 +39,10 @@ input.s1 {
     font-size:13pt;
     text-align:left;
 }
+div.item{
+    background-color: aqua;
+    width: 100%;
+    border-width: 3px;
+    border-style: solid;
+    border-color: black;
+}
